[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/character_sheet/CharacterSheet.gd" type="Script" id=1]
[ext_resource path="res://ui/character_sheet/pool/CardPool.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/card_concept/test_race_card.tres" type="Resource" id=3]
[ext_resource path="res://assets/sprites/mini_icons_armor.png" type="Texture" id=4]
[ext_resource path="res://ui/character_sheet/slots/DetailCardSlot.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/ninepatch_card_border_black.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/mini_icons_brains.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/mini_icons_brawn.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/mini_icons_agility.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/mini_icons_resistance.png" type="Texture" id=10]
[ext_resource path="res://data/card_concept/test_class_card.tres" type="Resource" id=11]
[ext_resource path="res://data/character_concept/character_example.tres" type="Resource" id=14]
[ext_resource path="res://data/card_concept/test_item_card.tres" type="Resource" id=15]
[ext_resource path="res://ui/character_sheet/Attribute.tscn" type="PackedScene" id=16]
[ext_resource path="res://data/card_concept/test_another_item_card.tres" type="Resource" id=17]
[ext_resource path="res://assets/sprites/mini_icons_health.png" type="Texture" id=18]

[node name="CharacterSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
character_sheet = ExtResource( 14 )

[node name="CharacterName" type="Label" parent="."]
margin_left = 13.0
margin_top = 9.0
margin_right = 179.0
margin_bottom = 23.0
text = "Name: Sgt. Potato Manpeeler"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceSlot" parent="." instance=ExtResource( 5 )]
margin_left = 13.0
margin_top = 24.0
margin_right = 55.0
margin_bottom = 56.0
texture = ExtResource( 6 )
type = 1
card = ExtResource( 3 )

[node name="ClassSlot" parent="." instance=ExtResource( 5 )]
margin_left = 13.0
margin_top = 62.0
margin_right = 205.0
margin_bottom = 98.0
texture = ExtResource( 6 )
type = 2
card = ExtResource( 11 )

[node name="Affinity" type="HBoxContainer" parent="."]
margin_left = 13.0
margin_top = 100.0
margin_right = 189.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agility" parent="." instance=ExtResource( 16 )]
margin_left = 13.0
margin_top = 142.0
margin_right = 45.0
margin_bottom = 174.0
icon = ExtResource( 9 )
tint = Color( 1, 0.921569, 0.568627, 1 )
value = 3
description = "Amount of agility the character has.

Agility score serves as a description fo how fast a character
can run away from their responsibilites  or how fast they react.

Some skills or equipment have a required agility score to be used."

[node name="Brawn" parent="." instance=ExtResource( 16 )]
margin_left = 45.0
margin_top = 142.0
margin_right = 77.0
margin_bottom = 174.0
icon = ExtResource( 8 )
tint = Color( 1, 0.466667, 0.466667, 1 )
value = 4
description = "Amount of brawn the character has.

Brawn score serves as a description of how ham a character is.
More ham, more damage is dealt and more ham abilities and
heavier equipment can be used.
"

[node name="Brains" parent="." instance=ExtResource( 16 )]
margin_left = 77.0
margin_top = 142.0
margin_right = 109.0
margin_bottom = 174.0
icon = ExtResource( 7 )
tint = Color( 0.607843, 0.92549, 1, 1 )
value = 2
description = "Amount of brains the character has.

Brains score serves as a description of how big-brained a character is.
More brains, more range and damage with majik . Even more brains
and they might even read books!
"

[node name="Armor" parent="." instance=ExtResource( 16 )]
margin_left = 13.0
margin_top = 174.0
margin_right = 45.0
margin_bottom = 206.0
icon = ExtResource( 4 )
value = 2
description = "Amount of armor the character has.

Armor lowers the incomming damage from
all non-magical sources."

[node name="Resistance" parent="." instance=ExtResource( 16 )]
margin_left = 45.0
margin_top = 174.0
margin_right = 77.0
margin_bottom = 206.0
icon = ExtResource( 10 )
tint = Color( 0.811765, 0.443137, 1, 1 )
value = 1
description = "Amount of magic resistance the character has.

Resistance lowers the effectiveness of all
spells targeting this character."

[node name="HP" parent="." instance=ExtResource( 16 )]
margin_left = 77.0
margin_top = 174.0
margin_right = 109.0
margin_bottom = 206.0
icon = ExtResource( 18 )
tint = Color( 1, 0, 0, 1 )
value = 3
description = "Amount of health the character has"

[node name="CardPool" parent="." instance=ExtResource( 2 )]
margin_left = 448.0
card_pool = [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 17 ) ]
